--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "axios": "1.7.5",
     "expo": "~53.0.9",
+    "expo-linear-gradient": "13.0.2",
     "expo-status-bar": "~2.2.3",
+    "formik": "2.4.6",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-otp-textinput": "1.1.6",
+    "react-native-root-toast": "3.6.0",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
