--- a/package.json
+++ b/package.json
@@ -1,34 +1,52 @@
 {
   "name": "kicks-app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "type-check": "tsc"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^7.1.9",
-    "@react-navigation/native-stack": "^7.3.13",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "1.7.5",
-    "expo": "~53.0.9",
-    "expo-linear-gradient": "13.0.2",
+    "expo": "~53.0.11",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "formik": "2.4.6",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-otp-textinput": "1.1.6",
+    "react-native-reanimated": "~3.17.4",
     "react-native-root-toast": "3.6.0",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.10.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-redux": "^9.1.0",
     "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "~0.72.8",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.56.0",
+    "eslint-config-universe": "^12.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "~5.8.3"
   },
   "private": true
