--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "1.7.5",
     "expo": "~53.0.11",
+    "expo-app-loading": "^2.1.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "formik": "2.4.6",
@@ -34,7 +35,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-redux": "^9.1.0",
-    "yup": "1.4.0"
+    "yup": "1.4.0",
+    "expo-splash-screen": "~0.30.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
