--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/masked-view": "^0.1.11",
@@ -24,24 +25,28 @@
     "expo": "~53.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-linear-gradient": "~14.1.5",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "formik": "2.4.6",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-otp-textinput": "1.1.6",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-root-toast": "3.6.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.0",
-    "yup": "1.4.0",
-    "expo-splash-screen": "~0.30.9"
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "~0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "babel-plugin-module-resolver": "^5.0.2",
