--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.2.1",
-    "axios": "1.7.5",
+    "axios": "^1.7.5",
     "expo": "~53.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-linear-gradient": "~14.1.5",
