--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "main": "src/index.tsx",
   "scripts": {
-    "start": "expo start",
+    "start": "node scripts/smart-start.js",
+    "start-manual": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint .",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "update-ip": "node scripts/update-ip.js",
+    "update-ip-ps": "powershell -ExecutionPolicy Bypass -File scripts/update-ip.ps1",
+    "restart-dev": "powershell -ExecutionPolicy Bypass -File scripts/restart-dev.ps1",
+    "fix-network": "npm run update-ip-ps && npm run restart-dev"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -18,16 +23,19 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.7.5",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "formik": "2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
@@ -37,9 +45,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-root-toast": "3.6.0",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.0",
+    "socket.io-client": "^4.8.1",
     "yup": "1.4.0"
   },
   "devDependencies": {
