--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.7",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -31,6 +32,7 @@
     "date-fns": "^4.1.0",
     "expo": "~53.0.11",
     "expo-app-loading": "^2.1.1",
+    "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
